# tt

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  NOTICE  console.hpp  issue.hpp  main.cpp  task.hpp
.tt/tasks/: 1770105378799399  1770105658246288  1770105681485736  1770105794773724  1770105881188333  1770106126475203  1770106232193732  1770106703201438  1770106825054112  1770107490662536  1770107781035764  1770363727871911  1770366451795359  1770366609887196  1770366787516690  1770368236521759  1770369670167264  1770541320451278  1770541341194787  1770542234986599  1770584259684429  1770584731406837  1770585026283702  1770589971031345  1770590022564251  1770590056505199  1770590308868462  1770594192128601  1771239152590393  1771239619724606  1771239890571208  1771241510768903  1771241695407697  1771241789126536  1771241940207067  1771249648377692  1771250012657350  1771250230920513  1771259627089781  1771261818034937  (+11 more)
.tt/tasks/alcolic/: L1772094096558492  L1772094103506706  L1772094110237839  L1772094117218722  L1772094128906720  L1772135248626730  L1772135553401217  L1772135568130495  L1772135690562529  L1772138313241970  L1772284099246773  L1772284143130320  L1772289471770518  data  idx  refs
.tt/tasks/ciciste/: refs
.tt_backup/tasks/: G1772136632401576  G1772136639343381  G1772269771938903
.tt_backup/tasks/alcolic/: L1772094096558492  L1772094103506706  L1772094110237839  L1772094117218722  L1772094128906720  L1772135568130495  L1772135690562529  L1772138313241970  L1772284143130320  L1772291391192784  refs
cmake/: compiler_options.cmake  profilers.cmake  project_config.cmake  sanitizers.cmake  stl.cmake
